tests/paczka2/big_fuzzy/99323051.err
Error in line 1: 140DveSB5Pu S975 91,5
Error in line 3: 4M13v1DVcMm S396 19,4
Error in line 2: 140DveSB5Pu S675 37,4
Error in line 24: S396 S675 0,9
Error in line 34: 140DveSB5Pu S975 74,7
Error in line 35: 140DveSB5Pu S396 92,6
Error in line 20: Q37zJ76fZ9 S975 31,9
Error in line 36: 140DveSB5Pu S675 78,9
Error in line 39: Q37zJ76fZ9 S396 15,4
Error in line 43: Kc4Uhv S975 32,9
Error in line 41: 140DveSB5Pu S396 4,5
Error in line 50: Kc4Uhv S675 11,6
Error in line 70: Kc4Uhv S371 57,5
Error in line 74: w0Wq S396 72,6
Error in line 75: w0Wq S975 54,5
Error in line 81: S396 S675 174,2
Error in line 84: Q37zJ76fZ9 S975 93,3
Error in line 89: S396 S975 223,7
Error in line 107: 140DveSB5Pu S675 367,29
Error in line 112: ´E1shOxFhyb S371 97,5
Error in line 103: 140DveSB5Pu S675 81,4
Error in line 113: 140DveSB5Pu S371 31,4
Error in line 101: LE1shOxFhyb S675 4,9
Error in line 115: LE1shOxFhyb S371 146,2
Error in line 119: LE1shOxFhyb S396 75,5
Error in line 108: Q37zJ76fZ9 S675 151,7
Error in line 124: Q37zJ76fZ9 S396 60,0
Error in line 126: 140DveSB5Pu S396 35,1
Error in line 132: S396 S675 83,3
Error in line 138: Kc4Uhv S396 88,6
Error in line 136: LE1shOxFhyb S975 25,4
Error in line 125: Q37zJ76fZ9 S371 77,2
Error in line 148: Kc4Uhv S675 73,8
Error in line 155: LE1shOxFhyb S396 66,2
Error in line 159: LE1shOxFhyb S975 10,9
Error in line 164: w0Wq S975 90,7
Error in line 160: LE1shOxFhyb S675 25,3
Error in line 170: Q37zJ76fZ9 S37s 46,0
Error in line 168: Kc4Uhv S975 32,6
Error in line 171: Kc4Uhv S396 1,0
Error in line 173: w0Wq S675 41,0
Error in line 177: w0Wq S396 54,6
Error in line 146: S396 S371 115,3
Error in line 174: Kc4Uhv S675 30,7
Error in line 184: Q37zJ76fZ9 S371 208,4
Error in line 190: Q37zJ76fZ9 S975 45,5
Error in line 197: Q37zJ7RfZ9 S39R 170,4
Error in line 198: w0Wq S371 36,9
Error in line 202: 140DveSB5Pu S975 40,9
Error in line 194: Q37zJ76fZ9 S396 92,6
Error in line 214: S396 S675 21,90
Error in line 229: LE1shOxFhyb S396 -1,4
Error in line 228: LE1shOxFhyb S396 14,3
Error in line 233: w0Wq S396 21,6
Error in line 244: 14'DveSB5Pu S675 4,5
Error in line 232: Q37zJ76fZ9 S396 316,0
Error in line 240: w0Wq S675 76,5
